create modal-serch marcup

--- a/html/home.html
+++ b/html/home.html
@@ -134,6 +134,23 @@
           </div>
         </div>
       </div>
+      <div class="modal-search-wrapper">
+        <div class="modal">
+          <span class="modal-search">
+            <input
+              class="modal-search-text"
+              name="search"
+              type="search"
+              pattern="^[a-zA-Za-яА-Я]+$"
+              placeholder="I search..."
+              minlength="2"
+            />
+            <svg class="search-icon" width="17.4" height="17.4">
+              <use href="../img/sprite.svg#icon-Search"></use>
+            </svg>
+          </span>
+        </div>
+      </div>
     </header>
 
     <main>
