added markup from burger-btn and searh.js

--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -14,7 +14,7 @@
     <header class="navigation">
       <div class="navigation-top">
         <div class="container container-flex top">
-          <span class="navigation-top__time">9:41</span>
+          <span class="navigation-top__time"><time>9:41</time></span>
 
           <ul class="navigation-top__list">
             <li class="navigation-top__list-item">
@@ -35,24 +35,27 @@
           </ul>
         </div>
       </div>
+
       <div class="container container-flex">
         <a class="navigation-logo" href="./home.html">
           <svg class="logo" width="66" height="41">
             <use href="../img/sprite.svg#icon-logo"></use>
           </svg>
         </a>
-        <span class="navigation-search-container">
-          <input
-            class="navigation-search"
-            name="search"
-            type="search"
-            placeholder="I search..."
-            minlength="2"
-          />
-          <svg class="search-icon" width="17.4" height="17.4">
-            <use href="../img/sprite.svg#icon-Search"></use>
-          </svg>
-        </span>
+        <form>
+          <span class="navigation-search-container">
+            <input
+              class="navigation-search"
+              name="search"
+              type="search"
+              placeholder="I search..."
+              minlength="2"
+            />
+            <svg class="search-icon" width="17.4" height="17.4">
+              <use href="../img/sprite.svg#icon-Search"></use>
+            </svg>
+          </span>
+        </form>
         <nav>
           <ul class="navigation-main-list">
             <li class="navigation-main-list__item">
@@ -61,12 +64,12 @@
             <li class="navigation-main-list__item">
               <a href="#" class="navigation-main-list__item-link">About us</a>
             </li>
-            <li class="navigation-main-list__item summary">
-              <a href="#" class="navigation-main-list__item-link">Shop</a>
-              <span
-                ><svg class="shop-icon" width="16" height="16">
-                  <use href="../img/sprite.svg#icon-arrow-down"></use></svg
-              ></span>
+            <li class="navigation-main-list__item">
+              <a href="#" class="navigation-main-list__item-link">
+                <details>
+                  <summary>Shop</summary>
+                </details>
+              </a>
             </li>
             <li class="navigation-main-list__item">
               <a href="#" class="navigation-main-list__item-link">Contact us</a>
@@ -99,19 +102,60 @@
               <span class="list-item__number">0</span>
             </a>
           </li>
-
-          <btn class="navigation-search-link">
-            <svg class="Search" width="24" height="24">
-              <use href="../img/sprite.svg#icon-Search"></use>
-            </svg>
-          </btn>
-
-          <btn class="burger-btn">
-            <svg class="Burger-icon" width="24" height="24">
-              <use href="../img/sprite.svg#icon-Burger"></use>
-            </svg>
-          </btn>
         </ul>
+        <button class="navigation-search-link">
+          <svg class="Search" width="24" height="24">
+            <use href="../img/sprite.svg#icon-Search"></use>
+          </svg>
+        </button>
+
+        <button class="burger-btn" aria-expanded="false">
+          <svg class="Burger-icon" width="24" height="24">
+            <use href="../img/sprite.svg#icon-Burger"></use>
+          </svg>
+        </button>
+        <div class="menu-container">
+          <div class="menu-mobile-wrapper">
+            <button class="btn-close">
+              <svg class="btn-close__icon" width="12px" height="12px">
+                <use href="../img/sprite.svg#icon-btn-close"></use>
+              </svg>
+            </button>
+            <a class="navigation-logo" href="./home.html">
+              <svg class="logo" width="66" height="41">
+                <use href="../img/sprite.svg#icon-logo"></use>
+              </svg>
+            </a>
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">About us</a></li>
+              <li><a href="">Shop</a></li>
+              <li><a href="">Contact us</a></li>
+              <li><a href="">FAQ</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="modal-search-wrapper">
+        <div class="modal">
+          <form>
+            <span class="modal-search">
+              <button class="btn-search form" type="submit">
+                <svg class="search-icon-modal" width="24" height="24">
+                  <use href="../img/sprite.svg#icon-Search"></use>
+                </svg>
+              </button>
+              <input
+                class="modal-search-text"
+                name="search"
+                type="search"
+                pattern="^[a-zA-Za-яА-Я]+$"
+                placeholder="I search..."
+                minlength="2"
+              />
+            </span>
+          </form>
+        </div>
       </div>
     </header>
 
@@ -625,5 +669,7 @@
         </div>
       </div>
     </footer>
+    <script src="../js/burger.js"></script>
+    <script src="../js/search.js"></script>
   </body>
 </html>
