added class heart from corect display none

--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -86,7 +86,7 @@
               <use href="../img/sprite.svg#icon-Account"></use>
             </svg>
           </li>
-          <li class="list-item">
+          <li class="list-item heart">
             <a class="list-item__link" href="#">
               <svg class="Heart social-icon" width="24" height="24">
                 <use href="../img/sprite.svg#icon-Heart"></use>
