added class active, and rotate form tabs

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -171,9 +171,9 @@
             <li>
               <span class="interface-list__item"
                 >My data
-                <button>
+                <button class="btn-arrow">
                   <svg class="no-rotate" width="24px" height="24px">
-                    <use href="../img/sprite.svg#icon-arrow-up"></use>
+                    <use href="../img/sprite.svg#icon-arrow-down"></use>
                   </svg>
                 </button>
               </span>
@@ -181,9 +181,9 @@
             <li>
               <span class="interface-list__item"
                 >History of orders
-                <button>
-                  <svg class="rotate-svg" width="24px" height="24px">
-                    <use href="../img/sprite.svg#icon-arrow-up"></use>
+                <button class="btn-arrow">
+                  <svg class="no-rotate" width="24px" height="24px">
+                    <use href="../img/sprite.svg#icon-arrow-down"></use>
                   </svg>
                 </button>
               </span>
@@ -191,9 +191,9 @@
             <li>
               <span class="interface-list__item"
                 >Payment cards
-                <button>
-                  <svg class="rotate-svg" width="24px" height="24px">
-                    <use href="../img/sprite.svg#icon-arrow-up"></use>
+                <button class="btn-arrow">
+                  <svg class="no-rotate" width="24px" height="24px">
+                    <use href="../img/sprite.svg#icon-arrow-down"></use>
                   </svg>
                 </button>
               </span>
@@ -740,5 +740,6 @@
     </footer>
     <script src="../js/burger.js"></script>
     <script src="../js/search.js"></script>
+    <script src="../js/tabs.js"></script>
   </body>
 </html>
