crorect with tabs js

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -171,7 +171,7 @@
             <li>
               <span class="interface-list__item"
                 >My data
-                <button class="btn-arrow">
+                <button class="btnArrow">
                   <svg class="no-rotate" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-arrow-down"></use>
                   </svg>
@@ -181,7 +181,7 @@
             <li>
               <span class="interface-list__item"
                 >History of orders
-                <button class="btn-arrow">
+                <button class="btnArrow">
                   <svg class="no-rotate" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-arrow-down"></use>
                   </svg>
@@ -191,7 +191,7 @@
             <li>
               <span class="interface-list__item"
                 >Payment cards
-                <button class="btn-arrow">
+                <button class="btnArrow">
                   <svg class="no-rotate" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-arrow-down"></use>
                   </svg>
