--- a/html/my-account.html
+++ b/html/my-account.html
@@ -167,6 +167,14 @@
           <a href="./my-account.html" class="bradcrumbs__link">My account</a>
         </div>
         <article>
+          <form class="formSubmit" action="#">
+            <label for="myData">My data</label>
+            <input type="radio" id="myData" name="data" />
+            <label for="orders">History orders</label>
+            <input type="radio" id="orders" name="orders" />
+            <label for="payment">Payment cards</label>
+            <input type="radio" id="payment" name="payment" />
+          </form>
           <ul class="interface-list">
             <li>
               <span class="interface-list__item"
