added value from from my-account page

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -169,11 +169,11 @@
         <article>
           <form class="formSubmit" action="#">
             <label for="myData">My data</label>
-            <input type="radio" id="myData" name="data" />
+            <input type="radio" id="myData" name="data" value="data" />
             <label for="orders">History orders</label>
-            <input type="radio" id="orders" name="orders" />
+            <input type="radio" id="orders" name="data" value="orders" />
             <label for="payment">Payment cards</label>
-            <input type="radio" id="payment" name="payment" />
+            <input type="radio" id="payment" name="data" value="payment" />
           </form>
           <ul class="interface-list">
             <li>
