pastate form with li-item

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -177,6 +177,85 @@
                   </svg>
                 </button>
               </span>
+              <form action="#">
+                <fieldset class="form-data two">
+                  <legend class="sign-in__subtitle">My personal data</legend>
+
+                  <label for="name" class="sign-in__subtext">Name</label>
+                  <input
+                    class="input-form"
+                    type="text"
+                    id="name"
+                    placeholder="Put your name"
+                  />
+
+                  <label for="lastName" class="sign-in__subtext"
+                    >Last name</label
+                  >
+                  <input
+                    class="input-form"
+                    type="text"
+                    id="lastName"
+                    placeholder="Put your last name"
+                  />
+
+                  <label for="userName" class="sign-in__subtext"
+                    >Username</label
+                  >
+                  <input
+                    class="input-form"
+                    type="text"
+                    id="userName"
+                    placeholder="Put your username"
+                  />
+                </fieldset>
+
+                <fieldset class="form-data two">
+                  <legend class="sign-in__subtitle two">My contacts</legend>
+                  <label for="email" class="sign-in__subtext">E-mail</label>
+                  <input
+                    class="input-form"
+                    type="text"
+                    id="email"
+                    placeholder="Alex2617@gmail.com"
+                  />
+
+                  <label for="phoneNumber" class="sign-in__subtext"
+                    >Phone number</label
+                  >
+                  <input
+                    class="input-form"
+                    type="password"
+                    id="phoneNumber"
+                    placeholder="+ _ (___) ___ __ __"
+                  />
+                </fieldset>
+
+                <fieldset class="form-data two">
+                  <legend class="sign-in__subtitle two">Change password</legend>
+                  <label for="newPassword" class="sign-in__subtext"
+                    >New password</label
+                  >
+                  <input
+                    class="input-form"
+                    type="password"
+                    id="newPassword"
+                    placeholder="Put new password"
+                  />
+
+                  <label for="confirmNewPassword" class="sign-in__subtext"
+                    >Confirm new password</label
+                  >
+                  <input
+                    class="input-form"
+                    type="password"
+                    id="confirmNewPassword"
+                    placeholder="Confirm new password"
+                  />
+                </fieldset>
+
+                <button class="sign-in btn">Save changes</button>
+              </form>
             </li>
             <li>
               <span class="interface-list__item"
@@ -206,82 +285,6 @@
             <use href="../img/sprite.svg#icon-Pencil"></use>
           </svg>
         </div>
-
-        <form action="#">
-          <fieldset class="form-data two">
-            <legend class="sign-in__subtitle">My personal data</legend>
-
-            <label for="name" class="sign-in__subtext">Name</label>
-            <input
-              class="input-form"
-              type="text"
-              id="name"
-              placeholder="Put your name"
-            />
-
-            <label for="lastName" class="sign-in__subtext">Last name</label>
-            <input
-              class="input-form"
-              type="text"
-              id="lastName"
-              placeholder="Put your last name"
-            />
-
-            <label for="userName" class="sign-in__subtext">Username</label>
-            <input
-              class="input-form"
-              type="text"
-              id="userName"
-              placeholder="Put your username"
-            />
-          </fieldset>
-
-          <fieldset class="form-data two">
-            <legend class="sign-in__subtitle two">My contacts</legend>
-            <label for="email" class="sign-in__subtext">E-mail</label>
-            <input
-              class="input-form"
-              type="text"
-              id="email"
-              placeholder="Alex2617@gmail.com"
-            />
-
-            <label for="phoneNumber" class="sign-in__subtext"
-              >Phone number</label
-            >
-            <input
-              class="input-form"
-              type="password"
-              id="phoneNumber"
-              placeholder="+ _ (___) ___ __ __"
-            />
-          </fieldset>
-
-          <fieldset class="form-data two">
-            <legend class="sign-in__subtitle two">Change password</legend>
-            <label for="newPassword" class="sign-in__subtext"
-              >New password</label
-            >
-            <input
-              class="input-form"
-              type="password"
-              id="newPassword"
-              placeholder="Put new password"
-            />
-
-            <label for="confirmNewPassword" class="sign-in__subtext"
-              >Confirm new password</label
-            >
-            <input
-              class="input-form"
-              type="password"
-              id="confirmNewPassword"
-              placeholder="Confirm new password"
-            />
-          </fieldset>
-
-          <button class="sign-in btn">Save changes</button>
-        </form>
 
         <h2 class="sign-in__subtitle two"></h2>
         <h3 class="log-out">Log out</h3>
