added new form container Payment card

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -283,6 +283,19 @@
                   </svg>
                 </button>
               </span>
+              <div class="sign-in__item-container">
+                <h1 class="sign-in__title">Payment cards</h1>
+              </div>
+              <div class="credit-card">
+                <span class="credit-card-container interface-list__item">
+                  <button class="btn-icon">
+                    <svg class="icon-plus" width="24px" height="24px">
+                      <use href="../img/sprite.svg#icon-plus"></use>
+                    </svg>
+                  </button>
+                  Add payment card
+                </span>
+              </div>
             </li>
           </ul>
         </article>
