added inline svg

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -168,16 +168,16 @@
         </div>
 
         <article>
+          <span class="interface-list__item"
+            >My data
+            <button class="btnArrow">
+              <svg class="no-rotate" width="24px" height="24px">
+                <use href="../img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </button>
+          </span>
           <ul class="interface-list">
             <li>
-              <span class="interface-list__item"
-                >My data
-                <button class="btnArrow">
-                  <svg class="no-rotate" width="24px" height="24px">
-                    <use href="../img/sprite.svg#icon-arrow-down"></use>
-                  </svg>
-                </button>
-              </span>
               <div class="sign-in__item-container">
                 <h1 class="sign-in__title">My data</h1>
                 <svg class="icon-pencil" width="24px" height="24px">
@@ -289,9 +289,27 @@
               <div class="credit-card">
                 <span class="credit-card-container interface-list__item">
                   <button class="btn-icon">
-                    <svg class="icon-plus" width="24px" height="24px">
-                      <use href="../img/sprite.svg#icon-plus"></use>
+                    <svg
+                      width="24.000000"
+                      height="24.000000"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                    >
+                      <desc>Created with Pixso.</desc>
+                      <defs />
+                      <path
+                        id="Union"
+                        d="M12.75 7C12.75 6.58 12.41 6.25 12 6.25C11.58 6.25 11.25 6.58 11.25 7L11.25 11.25L7 11.25C6.58 11.25 6.25 11.58 6.25 12C6.25 12.41 6.58 12.75 7 12.75L11.25 12.75L11.25 17C11.25 17.41 11.58 17.75 12 17.75C12.41 17.75 12.75 17.41 12.75 17L12.75 12.75L17 12.75C17.41 12.75 17.75 12.41 17.75 12C17.75 11.58 17.41 11.25 17 11.25L12.75 11.25L12.75 7Z"
+                        fill="#000000"
+                        fill-opacity="1.000000"
+                        fill-rule="nonzero"
+                      />
                     </svg>
+                    <!-- <svg class="icon-plus" width="24px" height="24px">
+                      <use href="../img/sprite.svg#icon-plus"></use>
+                    </svg> -->
                   </button>
                   Add payment card
                 </span>
