added modal-credit-card markup

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -314,6 +314,20 @@
                   Add payment card
                 </span>
               </div>
+              <div class="modal-credit-card">
+                <div class="modal-backdrop">
+                  <form action="#">
+                    <h2>Put yout card information</h2>
+                    <label for="#">Card number</label>
+                    <input type="text" />
+                    <label for="#">Expiration date</label>
+                    <input type="text" />
+                    <label for="">Security code</label>
+                    <input type="password" />
+                    <button>Save changes</button>
+                  </form>
+                </div>
+              </div>
             </li>
           </ul>
         </article>
