--- a/html/my-account.html
+++ b/html/my-account.html
@@ -184,7 +184,7 @@
                   <use href="../img/sprite.svg#icon-Pencil"></use>
                 </svg>
               </div>
-              <form action="#">
+              <form class="js-myFormData" action="#">
                 <fieldset class="form-data two">
                   <legend class="sign-in__subtitle">My personal data</legend>
 
@@ -1853,5 +1853,6 @@
     <script src="../js/search.js"></script>
     <script src="../js/tabs.js"></script>
     <script src="../js/modal-credit-card.js"></script>
+    <script src="../js/my-account-form.js"></script>
   </body>
 </html>
