added credit-card styles

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -1318,8 +1318,8 @@
                     </g>
                   </svg>
                 </a>
-                <p>Credit card</p>
-                <p><span>****</span>1011</p>
+                <p class="interface-list__item">Credit card</p>
+                <p class="interface-list__item"><span>****</span>1011</p>
               </div>
               <span class="credit-card-container interface-list__item">
                 <button class="btn-icon">
