added modal btn-cross

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -356,9 +356,9 @@
 
               <div class="modal-credit-card">
                 <div class="modal-backdrop">
-                  <button class="btn-close">
-                    <svg class="btn-close__icon" width="12px" height="12px">
-                      <use href="../img/sprite.svg#icon-btn-close"></use>
+                  <button class="btn-cross">
+                    <svg class="btn-cross__icon" width="12px" height="12px">
+                      <use href="../img/sprite.svg#icon-cross"></use>
                     </svg>
                   </button>
 
