--- a/html/my-account.html
+++ b/html/my-account.html
@@ -389,6 +389,11 @@
                         class="input-form"
                         type="text"
                         placeholder="&#95; &#95; &#95; &#95;    &#95; &#95; &#95; &#95;   &#95; &#95; &#95; &#95;    &#95; &#95; &#95; &#95;"
+                        name="cardNumber"
+                        inputmode="numeric"
+                        autocomplete="cc-number"
+                        maxlength="19"
+                        pattern="[0-9\s]{13,19}"
                       />
                       <label for="#" class="sign-in__subtext"
                         >Expiration date</label
