--- a/html/my-account.html
+++ b/html/my-account.html
@@ -316,7 +316,7 @@
               </div>
               <div class="interface-list__container">
                 <h2 class="interface-list__item bold">Card &#9839;1</h2>
-                <button class="icons">
+                <button class="icons icon-basket">
                   <svg
                     width="24.000000"
                     height="24.000000"
@@ -481,7 +481,13 @@
               </div>
 
               <div class="modal-credit-card del">
-                <div class="modal-backdrop"></div>
+                <div class="modal-backdrop">
+                  <p class="interface-list__item">
+                    Are you sure you want to delete the card?
+                  </p>
+                  <button>Yes</button>
+                  <button class="js-close-no">No</button>
+                </div>
               </div>
             </li>
           </ul>
@@ -947,5 +953,6 @@
     <script src="../js/tabs.js"></script>
     <script src="../js/modal-credit-card.js"></script>
     <script src="../js/my-account-form.js"></script>
+    <script src="../js/modal-del-credit-card.js"></script>
   </body>
 </html>
