--- a/html/my-account.html
+++ b/html/my-account.html
@@ -336,7 +336,7 @@
                     />
                   </svg>
                 </button>
-                <button class="icons">
+                <button type="button" class="icons">
                   <svg class="icon-pencil" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-Pencil"></use>
                   </svg>
