added container-filters and card-history

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -273,6 +273,19 @@
                   </svg>
                 </button>
               </span>
+              <h2 class="sign-in__title">History of orders</h2>
+              <div class="container-filters">
+                <button class="btn-filter" type="button">All</button>
+                <button class="btn-filter" type="button">This month</button>
+                <button class="btn-filter" type="button">Last month</button>
+              </div>
+
+              <div class="cards-history">
+                <span>Order #3528190, 16.08.2023 16:30</span>
+                <button></button>
+                <p>In processing</p>
+                <span>$90</span>
+              </div>
             </li>
             <li>
               <span class="interface-list__item"
