update with new tags data and tome from cards-history

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -281,7 +281,10 @@
               </div>
 
               <div class="cards-history">
-                <span>Order #3528190, 16.08.2023 16:30</span>
+                <span
+                  >Order #3528190, <data>16.08.2023</data
+                  ><time>16:30</time></span
+                >
                 <button></button>
                 <p>In processing</p>
                 <span>$90</span>
