create markup card-history

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -281,13 +281,107 @@
               </div>
 
               <div class="cards-history">
-                <span
+                <span class="cards-history__subtext"
                   >Order #3528190, <data>16.08.2023</data
                   ><time>16:30</time></span
                 >
-                <button></button>
-                <p>In processing</p>
-                <span>$90</span>
+                <button>&#10095;</button>
+                <div class="cards-history-container">
+                  <p class="cards-history__text">In processing</p>
+                  <span class="cards-history__price">$90</span>
+                </div>
+                <div class="card-images">
+                  <img
+                    class="card-small-tube"
+                    src="../img/small-tube.png"
+                    width="61px"
+                    height="72px"
+                    alt="tube"
+                  />
+                  <img
+                    class="card-small-tube"
+                    src="../img/small-tube.png"
+                    width="61px"
+                    height="72px"
+                    alt="tube"
+                  />
+                </div>
+              </div>
+              <div class="cards-history">
+                <span class="cards-history__subtext"
+                  >Order #3528190, <data>16.08.2023</data
+                  ><time>16:30</time></span
+                >
+                <button>&#10095;</button>
+                <div class="cards-history-container">
+                  <p class="cards-history__text customer">
+                    Goes to the customer
+                  </p>
+                  <span class="cards-history__price">$120</span>
+                </div>
+                <div class="card-images">
+                  <img
+                    class="card-small-tube"
+                    src="../img/small-tube.png"
+                    width="61px"
+                    height="72px"
+                    alt="tube"
+                  />
+                  <img
+                    class="card-small-tube"
+                    src="../img/small-tube.png"
+                    width="61px"
+                    height="72px"
+                    alt="tube"
+                  />
+                  <img
+                    class="card-small-tube"
+                    src="../img/small-tube.png"
+                    width="61px"
+                    height="72px"
+                    alt="tube"
+                  />
+                </div>
+              </div>
+              <div class="cards-history">
+                <span class="cards-history__subtext"
+                  >Order #3528190, <data>16.08.2023</data
+                  ><time>16:30</time></span
+                >
+                <button>&#10095;</button>
+                <div class="cards-history-container">
+                  <p class="cards-history__text delivered">Delivered</p>
+                  <span class="cards-history__price">$60</span>
+                </div>
+                <div class="card-images">
+                  <img
+                    class="card-small-tube"
+                    src="../img/small-tube.png"
+                    width="61px"
+                    height="72px"
+                    alt="tube"
+                  />
+                </div>
+              </div>
+              <div class="cards-history">
+                <span class="cards-history__subtext"
+                  >Order #3528190, <data>16.08.2023</data
+                  ><time>16:30</time></span
+                >
+                <button>&#10095;</button>
+                <div class="cards-history-container">
+                  <p class="cards-history__text canceled">Canceled</p>
+                  <span class="cards-history__price">$30</span>
+                </div>
+                <div class="card-images">
+                  <img
+                    class="card-small-tube"
+                    src="../img/small-tube.png"
+                    width="61px"
+                    height="72px"
+                    alt="tube"
+                  />
+                </div>
               </div>
             </li>
             <li>
